--- a/portfolio.html
+++ b/portfolio.html
@@ -5,95 +5,100 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body class="body">
     <header class="header">
-        <nav>
-            <a class="logo-link" href="./index.html">Web<span class="header-logo">Studio</span></a>
+        <nav class="container main-nav">
+            <a class="logo-link" href="/index.html">Web<span class="header-logo">Studio</span></a>
             <ul class="site-nav list">
-                <li><a href="" class="link">Студія</a></li>
-                <li><a href="" class="link current">Портфоліо</a></li>
-                <li><a href="" class="link">Контакти</a></li>
+                <li class="item"><a href="" class="link">Студія</a></li>
+                <li class="item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
+                <li class="item"><a href="" class="link">Контакти</a></li>
             </ul>
-        </nav>
+    
         <ul class="site-address list">
-            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+            <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
+        </nav>
     </header>
     <main>
         <section class="portfolio">
-            <div>  
+            <div class="filter-container">  
                 <ul class="list-button list">
-                   <li><button type="button" class="link">Усі</button></li>
-                   <li><button type="button" class="link">Веб-сайти</button></li>
-                   <li><button type="button" class="link">Додатки</button></li>
-                   <li><button type="button" class="link">Дизайн</button></li>
-                   <li><button type="button" class="link">Маркетинг</button></li>
+                   <li class="item"><button type="button" class="link">Усі</button></li>
+                   <li class="item"><button type="button" class="link">Веб-сайти</button></li>
+                   <li class="item"><button type="button" class="link">Додатки</button></li>
+                   <li class="item"><button type="button" class="link">Дизайн</button></li>
+                   <li class="item"><button type="button" class="link">Маркетинг</button></li>
                 </ul>
             </div>
-            <ul class="list">
-                <li>
+            <div class="project-container">
+            <ul class="project-list list">
+                <li class="element">
                     <img src="./images/techno.jpg" alt="Технокряк" width="370" height="294">
                     <h2 class="portfolio-title">Технокряк</h2>
                     <p class="text">Веб-сайт</p>
                 </li>
-                <li>
+                <li class="element">
                     <img src="./images/poster.jpg" alt="Постер" width="370" height="294">
                     <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                     <p class="text">Дизайн</p>
                 </li>
-                <li>
+                <li class="element">
                     <img src="./images/seafood.jpg" alt="Ресторан" width="370" height="294">
                     <h2 class="portfolio-title">Ресторан Seafood</h2>
                     <p class="text">Додаток</p>
                 </li>
-                <li>
+                <li class="element">
                     <img src="./images/prime.jpg" alt="Гаджет" width="370" height="294">
                     <h2 class="portfolio-title">Проєкт Prime</h2>
                     <p class="text">Маркетинг</p>
                 </li>
-                <li>
+                <li class="element">
                     <img src="./images/boxes.jpg" alt="Коробка" width="370" height="294">
                     <h2 class="portfolio-title">Проєкт Boxes</h2>
                     <p class="text">Додаток</p>
                 </li>
-                <li>
+                <li class="element">
                     <img src="./images/display.jpg" alt="Дисплей" width="370" height="294">
                     <h2 class="portfolio-title">Inspiration has no Borders</h2>
                     <p class="text">Веб-сайт</p>
                 </li>
-                <li>
+                <li class="element">
                     <img src="./images/edition.jpg" alt="Видання" width="370" height="294">
                     <h2 class="portfolio-title">Видання Limited Edition</h2>
                     <p class="text"> Дизайн</p>
                 </li>
-                <li>
+                <li class="element">
                     <img src="./images/project.jpg" alt="Проект" width="370" height="294">
                     <h2 class="portfolio-title">Проєкт LAB</h2>
                     <p class="text">Маркетинг</p>
                 </li>
-                <li>
+                <li class="element">
                     <img src="./images/business.jpg" alt="Бізнес" width="370" height="294">
                     <h2 class="portfolio-title">Growing Business</h2>
                     <p class="text">Додаток</p>
                 </li>
             </ul>
-
+        </div>
         </section>
     </main>
 
     <footer class="footer">
+        <div class="container">
         <a class="logo-link" href="/index.html">Web<span class="footer-logo">Studio</span></a>
         <address>
             <p class="text">м. Київ, пр-т Лесі Українки, 26</p>
             <ul class="footer-address list">
-                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
         </address> 
+    </div>
     </footer>
     
 </body>
