--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="mein-nav">
             <a class="logo-link" href="/index.html">Web<span class="header-logo">Studio</span></a>
             <ul class="site-nav list">
-                <li class="site-nav-item"><a href="" class="link">Студія</a></li>
+                <li class="site-nav-item"><a href="./index.html" class="link">Студія</a></li>
                 <li class="site-nav-item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
                 <li class="site-nav-item"><a href="" class="link">Контакти</a></li>
             </ul>
@@ -32,7 +32,7 @@
     <main>
             <section class="hero">
                 <div class="container">
-                <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+                <h1 class="hero-title">Ефективні рішення для <br>вашого бізнесу</h1>
                 <button type="button" class="button">Замовити послугу</button>
             </div>
             </section>
@@ -111,7 +111,7 @@
     <footer class="footer">
         <div class="container">
         <a class="logo-link" href="/index.html">Web<span class="footer-logo">Studio</span></a>
-        <address>
+        <address class="address-items">
             <p class="text">м. Київ, пр-т Лесі Українки, 26</p>
             <ul class="footer-address list">
                 <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
