--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
         <nav class="mein-nav">
             <a class="logo-link" href="/index.html">Web<span class="header-logo">Studio</span></a>
             <ul class="site-nav list">
-                <li class="site-nav-item"><a href="" class="link">Студія</a></li>
+                <li class="site-nav-item"><a href="./index.html" class="link">Студія</a></li>
                 <li class="site-nav-item"><a href="./portfolio.html" class="link current">Портфоліо</a></li>
                 <li class="site-nav-item"><a href="" class="link">Контакти</a></li>
             </ul>
@@ -114,7 +114,7 @@
     <footer class="footer">
         <div class="container">
         <a class="logo-link" href="/index.html">Web<span class="footer-logo">Studio</span></a>
-        <address>
+        <address class="address-items">
             <p class="text">м. Київ, пр-т Лесі Українки, 26</p>
             <ul class="footer-address list">
                 <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
@@ -123,7 +123,7 @@
         </address> 
     </div>
     </footer>
-    
+
 </body>
 </html>
 
