--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="container wrap">
         <nav class="mein-nav">
-            <a class="logo-link" href="/index.html">Web<span class="header-logo">Studio</span></a>
+            <a class="logo-link" href="./index.html" >Web<span class="header-logo">Studio</span></a>
             <ul class="site-nav list">
                 <li class="site-nav-item"><a href="./index.html" class="link">Студія</a></li>
                 <li class="site-nav-item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
